.opsera-ubr-nms/k8s/api-gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
    tenant: opsera
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        tenant: opsera
    spec:
      serviceAccountName: ubr-nms
      imagePullSecrets:
        - name: ecr-pull-secret
      containers:
        - name: api-gateway
          image: PLACEHOLDER_API_GATEWAY_ECR_URI
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        fsGroup: 100
