.opsera-ubr-nms/k8s/api-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
    tenant: opsera
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
